--- a/src/style/play.scss
+++ b/src/style/play.scss
@@ -301,6 +301,12 @@
       }
     }
   }
+  .song-name {
+    color: #cfcfd0;
+  }
+  .song-detail {
+    color: #cfcfd0;
+  }
   .comment-head {
     color: #c5c6cc;
     border-bottom: 1px solid #1f2227;
