--- a/src/style/hotSinger.scss
+++ b/src/style/hotSinger.scss
@@ -69,3 +69,26 @@
     }
   }
 }
+#black {
+  .hot-singer-nav {
+    border-bottom: 1px solid #202226;
+    li {
+      color: #818284;
+      &:hover {
+        color: #c8c9d0;
+      }
+    }
+    .active {
+      color: #c8c9d0;
+      border-bottom: 3px solid #5c5e61;
+    }
+  }
+  img {
+    border: 1px solid #16181c;
+  }
+  span {
+    &:hover {
+      color:#fff;
+    }
+  }
+}
