--- a/src/style/playList.scss
+++ b/src/style/playList.scss
@@ -123,3 +123,31 @@
     }
   }
 }
+#black {
+  .playlist-nav {
+    border-bottom: 1px solid #202226;
+    li {
+      color: #818284;
+      &:hover {
+        color: #c8c9d0;
+      }
+    }
+    .active {
+      color: #c8c9d0;
+      border-bottom: 3px solid #5c5e61;
+    }
+  }
+  .playlists {
+    .item-img {
+      border: 2px solid #161830;
+    }
+  }
+  .dec {
+    color: #dcdde4;
+    span {
+      &:hover {
+        color: #dcdde4;
+      }
+    }
+  }
+}
